--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 						<li class = "action" id = "Redo"><a href ="#">Redo</a></li>
 					</ul>
 					<ul class = "nav navbar-nav navbar-right">
+						<li class = "applyPolygon"><a href = "#">Apply Polygon</a></li>
 						<li class = "action" id = "Delete"><a href ="#">Delete</a></li>
 						<li class = "action" id = "Clear"><a href ="#">Clear</a></li>
 					</ul>
@@ -66,9 +67,17 @@
 		</div>
 		<footer class="footer">
 	      <div class="container">
-	        <p id = "modeText"></p>
-	        <p id = "actionText"></p>
-	        <p id = "colourText"></p>
+	      	<div class = "col-md-3"></div>
+	      	<div class = "col-md-2">
+	        	<p id = "modeText"></p>
+	        </div>
+	        <div class = "col-md-2">
+	        	<p id = "actionText"></p>
+	        </div>
+	        <div class = "col-md-2">
+	        	<p id = "colourText"></p>
+	        </div>
+	        <div class = "col-md-3"></div>
 	      </div>
 	    </footer>
 	</body>
